# clear-wm

./: .gitignore  Cargo.toml  Makefile
.wm_default_config/: build_config.json
.zym-default/: zym-build.json  zym-ui.json  zym-wm.json
script/: check-zymconf.sh  check_config_file.sh
wm_config/: Cargo.toml
wm_config/src/: lib.rs
wm_controller/: Cargo.toml
wm_controller/src/: event_handler.rs  handler.rs  lib.rs  session.rs
wm_controller/src/event_handler/: events.rs  handler.rs  types.rs
wm_controller/src/event_handler/events/: button_press.rs  button_release.rs  client_message.rs  configure_request.rs  enter_notify.rs  expose.rs  map_request.rs  motion_notify.rs  unmap_notify.rs
wm_controller/src/handler/: button_press.rs  expose.rs  map_request.rs  motion_notify.rs  unmap_notify.rs
wm_draw/: Cargo.toml
wm_draw/src/: drawing_device.rs  lib.rs  traits.rs
wm_draw/src/draw_device/rules/: client.rs
wm_draw/src/drawing_device/rules/: client.rs
wm_drawing/: Cargo.toml
wm_drawing/src/: device.rs  drawing_device.rs  lib.rs  traits.rs
wm_drawing/src/device/: client.rs
wm_drawing/src/drawing_device/: types.rs
wm_drawing/src/drawing_device/rules/: client.rs
wm_listener/: Cargo.toml
wm_listener/src/: event_listener.rs  event_reflector.rs  lib.rs
wm_listener/src/event_listener/: features.rs  listener.rs  traits.rs
wm_listener/src/event_reflector/: features.rs  traits.rs  types.rs
wm_logger/: Cargo.toml
wm_logger/src/: lib.rs
wm_main/: Cargo.toml
wm_main/src/: main.rs
wm_manager/: Cargo.toml
wm_manager/src/: client_manager.rs  cursor_manager.rs
wm_manager/src/client_manager/: client.rs  features.rs  manager.rs  types.rs
wm_manager/src/client_manager/features/: create.rs  draw.rs  focus.rs  get_geometry.rs  grab.rs  grab_button.rs  map.rs  move_resize.rs  raise.rs  remove.rs
wm_manager/src/client_manager/types/: client.rs  geometry.rs  manager.rs
wm_manager/src/collection_manager/: features.rs  types.rs
wm_manager/src/cursor_manager/: features.rs  manager.rs
wm_manager/src/property_manager/: features.rs  types.rs
wm_manager/src/server_manager/: features.rs  manager.rs
wm_model/: Cargo.toml
wm_model/src/: traits.rs
wm_model/src/entity/: client.rs  cursor.rs  geometry.rs  visual.rs
wm_model/src/traits/: client_manager.rs  collection_manager.rs  cursor_manager.rs  property_manager.rs  server_manager.rs
wm_usecase/: Cargo.toml
wm_usecase/src/: client_usecase.rs  lib.rs  traits.rs
wm_usecase/src/client/: features.rs  usecase.rs
wm_usecase/src/client/features/: configure.rs  drag.rs  draw.rs  production.rs
wm_usecase/src/client_usecase/: features.rs  types.rs  usecase.rs
wm_usecase/src/client_usecase/features/: configure.rs  control.rs  drag.rs  draw.rs  production.rs
zym/: Cargo.toml
zym-config/: Cargo.toml
zym-config/src/: lib.rs
zym-controller/: Cargo.toml
zym-controller/src/: handler.rs  lib.rs
zym-controller/src/handler/: button_press.rs  button_release.rs  client_message.rs  configure_request.rs  enter_notify.rs  expose.rs  map_request.rs  motion_notify.rs  unmap_notify.rs
zym-domain/: Cargo.toml
zym-domain/src/entity/: client.rs
zym-domain/src/repository/: session.rs
zym-draw/: Cargo.toml
zym-draw/src/: common.rs  device.rs  lib.rs
zym-draw/src/device/: client.rs
zym-event/: Cargo.toml
zym-event/src/: handler.rs
zym-event/src/handler/: button_press.rs  button_release.rs  configure_request.rs  enter_notify.rs  expose.rs  map_request.rs  motion_notify.rs  unmap_notify.rs
zym-listener/: Cargo.toml
zym-listener/src/: event_listener.rs
zym-logger/: Cargo.toml
zym-logger/src/: lib.rs
zym-manager/: Cargo.toml
zym-manager/src/: client.rs  lib.rs  manager.rs
zym-manager/src/client/: create.rs  features.rs  geometry.rs  map.rs  move_resize.rs
zym-manager/src/client/features/: create.rs  draw.rs  focus.rs  get_geometry.rs  grab.rs  map.rs  move_resize.rs  raise.rs  remove.rs
zym-manager/src/cursor/: manager.rs
zym-manager/src/server/: manager.rs
zym-model/: Cargo.toml
zym-model/src/: common.rs  entity.rs
zym-model/src/common/: client.rs  manager.rs  session.rs  window.rs
zym-model/src/entity/: client.rs  cursor.rs  drawable.rs  geometry.rs  visual.rs
zym-model/src/entity/client/: frame.rs
zym-session/: Cargo.toml
zym-session/src/: cairo.rs  common.rs  error.rs  lib.rs  repository.rs  session.rs  visual_info.rs
zym-session/src/repository/: cairo.rs  visual.rs
zym-session/src/session/: client.rs  event.rs
zym-usecase/: Cargo.toml
zym-usecase/src/: client.rs  common.rs
zym-usecase/src/client/: compose.rs  configure.rs  features.rs  usecase.rs
zym-usecase/src/client/features/: compose.rs  configure.rs  control.rs  drag.rs  draw.rs  production.rs
zym/src/: main.rs
