[package]
name = "wm_controller"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.11", features = ["allow-unsafe-code"] }
wm_listener = { path = "../wm_listener" }
wm_usecase = { path = "../wm_usecase" }
log = "0.4"