[package]
name = "wm_draw"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.16", features = ["xcb"] }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "pango" }
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "pangocairo" }
wm_config = { path = "../wm_config" }
log = "0.4"