[package]
name = "wm_drawing"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.16", features = ["xcb"] }
wm_config = { path = "../wm_config" }
log = "0.4"