[package]
name = "wm_manager"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.11", features = ["allow-unsafe-code"] }
cairo-rs = { version = "0.16", features = ["xcb"] }
wm_config = { path = "../wm_config" }
wm_drawing = { path = "../wm_drawing" }
wm_model = { path = "../wm_model" }
log = "0.4"