[package]
name = "zym-model"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.11.0", features = ["allow-unsafe-code", "render"] }
cairo-rs = { version = "0.16.7", features = ["xcb"] }
zym-config = { path = "../zym-config" }