[package]
name = "zym-usecase"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.11", features = ["allow-unsafe-code", "render"] }
zym-model = { path = "../zym-model" }