[package]
name = "zym"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.11", features = ["allow-unsafe-code", "render"] }
cairo-rs = { version = "0.16", features = ["xcb"] }
zym-session = { path = "../zym-session" }
zym-logger = { path = "../zym-logger" }
zym-model = { path = "../zym-model" }
zym-controller = { path = "../zym-controller" }
zym-manager = { path = "../zym-manager" }
zym-config = { path = "../zym-config" }
zym-usecase = { path = "../zym-usecase" }
log = "0.4"